// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Column /> ref should work 1`] = `
.c0 {
  padding-left: 8px;
  width: 100%;
}

<div
  class="poodle-box poodle-column c0"
>
  Column
</div>
`;

exports[`<Column /> should render Box props correctly 1`] = `
.c0 {
  padding-left: 8px;
  padding-top: 10px;
  width: 100%;
  margin-top: 10px;
}

<section
  aria-disabled="true"
  class="poodle-box poodle-column c0"
  id="100"
>
  Column
</section>
`;

exports[`<Column /> should render col width correctly 1`] = `
.c0 {
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 100%;
}

@media screen and (min-width: 768px) {
  .c0 {
    padding-left: 10px;
  }
}

<div
  class="poodle-box poodle-column c0"
>
  Column
</div>
`;

exports[`<Column /> should render column correctly 1`] = `
.c0 {
  padding-left: 8px;
  width: 100%;
}

<div
  class="poodle-box poodle-column c0"
>
  Column
</div>
`;

exports[`<Column /> should render with array responsive gutter and collapse correctly 1`] = `
.c0 {
  width: 100%;
}

@media screen and (min-width: 768px) {
  .c0 {
    padding-left: 15px;
  }
}

@media screen and (min-width: 992px) {
  .c0 {
    padding-left: 20px;
  }
}

@media screen and (min-width: 1200px) {
  .c0 {
    padding-left: 25px;
  }
}

<div
  class="poodle-box poodle-column c0"
>
  Column
</div>
`;

exports[`<Column /> should render with array responsive gutter correctly 1`] = `
.c0 {
  padding-left: 5px;
  padding-top: 15px;
  width: 100%;
}

@media screen and (min-width: 576px) {
  .c0 {
    padding-left: 10px;
  }
}

@media screen and (min-width: 768px) {
  .c0 {
    padding-left: 15px;
  }
}

@media screen and (min-width: 992px) {
  .c0 {
    padding-left: 20px;
  }
}

@media screen and (min-width: 576px) {
  .c0 {
    padding-top: 25px;
  }
}

@media screen and (min-width: 768px) {
  .c0 {
    padding-top: 35px;
  }
}

@media screen and (min-width: 992px) {
  .c0 {
    padding-top: 40px;
  }
}

<div
  class="poodle-box poodle-column c0"
>
  Column
</div>
`;

exports[`<Column /> should render with gutter and collapse correctly 1`] = `
.c0 {
  width: 100%;
}

@media screen and (min-width: 768px) {
  .c0 {
    padding-left: 8px;
  }
}

<div
  class="poodle-box poodle-column c0"
>
  Column
</div>
`;

exports[`<Column /> should render with object responsive gutter and collapse correctly 1`] = `
.c0 {
  width: 100%;
}

@media screen and (min-width: 768px) {
  .c0 {
    padding-left: 20px;
  }
}

@media screen and (min-width: 992px) {
  .c0 {
    padding-left: 30px;
  }
}

@media screen and (min-width: 1200px) {
  .c0 {
    padding-left: 40px;
  }
}

<div
  class="poodle-box poodle-column c0"
>
  Column
</div>
`;

exports[`<Column /> should render with object responsive gutter correctly 1`] = `
.c0 {
  padding-left: 5px;
  padding-top: 15px;
  width: 100%;
}

@media screen and (min-width: 576px) {
  .c0 {
    padding-left: 10px;
  }
}

@media screen and (min-width: 768px) {
  .c0 {
    padding-left: 20px;
  }
}

@media screen and (min-width: 992px) {
  .c0 {
    padding-left: 30px;
  }
}

@media screen and (min-width: 1200px) {
  .c0 {
    padding-left: 40px;
  }
}

@media screen and (min-width: 576px) {
  .c0 {
    padding-top: 25px;
  }
}

@media screen and (min-width: 768px) {
  .c0 {
    padding-top: 35px;
  }
}

@media screen and (min-width: 992px) {
  .c0 {
    padding-top: 45px;
  }
}

@media screen and (min-width: 1200px) {
  .c0 {
    padding-top: 55px;
  }
}

<div
  class="poodle-box poodle-column c0"
>
  Column
</div>
`;

exports[`<Column /> theming should extend styles in global 1`] = `
.c0 {
  width: 100%;
  margin-top: 10px;
  top: 0;
  text-indent: 1px;
  letter-spacing: 200px;
}

<div
  class="poodle-box poodle-column c0"
>
  Column
</div>
`;

exports[`<Column /> theming should extend styles in local 1`] = `
.c0 {
  width: 100%;
  margin-top: 10px;
  top: 0;
  text-indent: 1px;
  letter-spacing: 200px;
}

<div
  class="poodle-box poodle-column c0"
>
  Column
</div>
`;

exports[`<Column /> theming should override styles 1`] = `
.c0 {
  margin-top: 50px;
}

<div
  class="poodle-box poodle-column c0"
>
  Column
</div>
`;

exports[`<Column /> theming should render with default props correctly 1`] = `
.c0 {
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 100%;
}

<div
  class="poodle-box poodle-column hello c0"
  id="id"
>
  Column
</div>
`;
